# andev-compose

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: b447f2b4e8f3_initial_migration.py
andev_compose/: config.py  crud.py  db.py  main.py  models.py
tests/: test_andev_compose.py
