[tool.poetry]
name = "andev-compose"
version = "0.1.0"
description = ""
authors = ["Nikita Subbotin <sub.nik.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
aioredis = "^2.0.1"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
aiopg = "^1.3.3"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.3.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
